Import simple property files